--- a/res/layout/activity_navigation.xml
+++ b/res/layout/activity_navigation.xml
@@ -5,7 +5,10 @@
     tools:context=".NavigationActivity" >
 
     <com.google.android.maps.MapView
+        android:id="@+id/main_map_view"
         android:enabled="true"
-        android:clickable="true" />
+        android:clickable="true"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" />
 
 </RelativeLayout>
