--- a/res/layout/activity_navigation.xml
+++ b/res/layout/activity_navigation.xml
@@ -5,9 +5,9 @@
     tools:context=".NavigationActivity" >
     
     <fragment
-	    class="com.google.android.gms.maps.MapFragment"
-	    android:id="@+id/main_map_view"
-	    android:layout_width="match_parent"
-	    android:layout_height="match_parent"/>
+        android:id="@+id/main_map_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        class="com.google.android.gms.maps.MapFragment" />
 
 </RelativeLayout>
