--- a/res/values/ids.xml
+++ b/res/values/ids.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
+    <item name="fragment_layout" type="id" />
     <item name="main_map_view" type="id" />
+    <item name="directions_fragment" type="id" />
+    <item name="navigation_fragment" type="id" />
+    <item name="navigation_activity_navigation_fragment" type="id" />
+    <item name="demo_navigation_fragment_container" type="id" />
+    <item name="demo_navigation_fragment" type="id" />
 </resources>
